    Qu-Prolog 8.12 or a later version.

    Updated the GNU Prolog config file in order to support the built_in_fd/0,
    built_in_fd/1, built_in/0, built_in/1, and ensure_linked/1 proprietary
    directives.

    Workaround a B-Prolog 7.4 bug where the built-in predicate callable/1 is
    missing the property "built_in". Declared the predicates and/3, equiv/3,
    and or/3 as built-in predicates.

    Updated the Qu-Prolog integration files in order to avoid a segmentation
    fault when using a 32 bits compilation of Qu-Prolog. Thanks to Peter
    Robinson for his help in solving this problem.

    Added a YAP integration file, "yaphooks.pl", defining the hook predicate
    user:prolog_predicate_name/2.

    Renamed the SWI-Prolog integration files, "swihook.pl" and "xpcehook.pl"
    to, respectively, "swihooks.pl" and "xpcehooks.pl".

    Added a definition for the hook predicate user:prolog_predicate_name/2 to
    the SWI-Prolog hook file, "swihooks.pl". This hook predicate allows a more
    user-friendly experience when using the SWI-Prolog profiler with Logtalk.
    Requires SWI-Prolog 5.10.2 (stable) or 5.11.8 (development) or later
    versions.

    Updated the library "types_loader.lgt" file to also load the heaps library
    files.

    Added an example, "profilers", featuring simple wrappers for the SICStus
    Prolog 4 profiler and the YAP count profiler.

    Added an example, "delegates", illustrating an implementation of the
    delegation design pattern.

    Added a highly experimental example, "chr", of CHR integration. Currently
    requires the use of Qu-Prolog, SICStus Prolog, SWI-Prolog, or YAP as the
    back-end Prolog compiler.

    Added individual examples of using B-Prolog Action Rules within objects
    to the "constraints/bp" example.

    Updated the "cc" example, adding support for Qu-Prolog, adding an
    operating_system_type/1 predicate, and correcting the declaration
    of the predicate shell/1.
